--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@ input {
   font-size: 1.2rem;
   padding-bottom: 35px;
   padding-top: 15px;
-  min-width: 550px;
+  max-width: 550px;
   outline: none;
 }
 input[value] {
@@ -579,6 +579,11 @@ header ul li:not(:last-child) {
   }
   #about-us .card .name {
     font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 375px) {
+  #about-us .card .photo {
+    height: 300px;
   }
 }
 
