--- a/main.scss
+++ b/main.scss
@@ -108,7 +108,8 @@ input {
   font-size: 1.2rem;
   padding-bottom: 35px;
   padding-top: 15px;
-  min-width: 550px;
+  max-width: 550px;
+  
   outline: none;
   &[value] {
     font-weight: 700;
@@ -597,6 +598,13 @@ header {
       }
     }
   }
+  @media screen and (max-width: 375px) {
+    .card {
+
+    .photo{
+      height: 300px;
+    }
+  }}
 }
 
 #projects {
