--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@ input {
   font-size: 1.2rem;
   padding-bottom: 35px;
   padding-top: 15px;
-  max-width: 550px;
+  min-width: 550px;
   outline: none;
 }
 input[value] {
@@ -795,6 +795,7 @@ header ul li:not(:last-child) {
   }
   #tell-us .bottom-section :nth-child(n) {
     width: 100%;
+    min-width: 275px !important;
   }
   #tell-us .bottom-section :nth-child(4) {
     margin-top: 0;
@@ -806,6 +807,9 @@ header ul li:not(:last-child) {
   #tell-us .bottom-section .budget-scroll .price {
     padding: 30px 0;
   }
+}
+#tell-us .btn-send {
+  padding: 20px 0;
 }
 
 #contact {
