--- a/main.scss
+++ b/main.scss
@@ -108,8 +108,7 @@ input {
   font-size: 1.2rem;
   padding-bottom: 35px;
   padding-top: 15px;
-  max-width: 550px;
-  
+  min-width: 550px;
   outline: none;
   &[value] {
     font-weight: 700;
@@ -820,6 +819,7 @@ header {
       }
       :nth-child(n) {
         width: 100%;
+        min-width: 275px!important;
       }
       :nth-child(4) {
         margin-top: 0;
@@ -832,6 +832,9 @@ header {
         }
       }
     }
+  }
+  .btn-send{
+    padding: 20px 0;
   }
 }
 
